ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ingress
  namespace: retail
  annotations:
    # Required for AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    spec:
     ingressClassName: alb

    # SSL (ACM certificate ARN from Terraform output)
    alb.ingress.kubernetes.io/certificate-arn: <ACM_CERT_ARN>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'

    # Redirect HTTP → HTTPS
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig":
        {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:
  rules:
    - host: retail.innovatemart.com
      http:
        paths:
          # Redirect all HTTP traffic
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation

          # UI → /
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80

          # Orders → /orders
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80

          # Catalog → /catalog
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 80

          # Carts → /carts
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 80
